fixes column of posts on small iphone6 screen

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -91,24 +91,6 @@ body {
    border: none;
 }
 
-div#posts.center-block.masonry
-{
-   @media screen and (max-width: 600px){
-      padding-left: 0;
-      padding-right: 0;
-      margin-left: 0;
-      margin-right: 0;
-   }
-}
-
-
-// .header 
-// {
-// 	font-size: 70px;
-//    @media screen and (max-width: 800px){
-//       font-size: 30px;
-//    }
-// }
 
 .add-new 
 {
@@ -151,7 +133,7 @@ div#posts.center-block.masonry
 
 .post-index-tile{
    @media screen and (max-width: 600px){
-      width: 95%;
+      width: 100%;
    }   
 
 }
@@ -166,14 +148,6 @@ div#posts.center-block.masonry
    padding-bottom: 0;
    margin: 0 auto;
    width: 100%;
-   @media screen and (max-width: 600px){
-      width: 100%;
-      padding-left: 0;
-      padding-right: 0;
-      margin-left: 0;
-      margin-right: 0;
-   }
-
 }
 
 .container.masonry-container
@@ -303,12 +277,6 @@ p.col-xs-3
    max-width: 100%
 }
 
-// .link-to-source
-// {
-//    max-width: 75%;
-//    padding-left: 1%; 
-//    padding-right: 1%; 
-// }
 
 
 /*
